Fix spacing of search input

--- a/public/assets/_scss/03-modules/_disaster-search.scss
+++ b/public/assets/_scss/03-modules/_disaster-search.scss
@@ -19,7 +19,7 @@ span {
   overflow: hidden;
 }
 .offset-bg {
-  padding:0 10px 0 30px;
+  padding:0 10px 0 20px;
 }
 /* Search container styles ----------------------------- */
 .search-container {
@@ -29,7 +29,7 @@ span {
   h2 {
     color: #fff;
     text-align: left;
-    margin-left:30px;
+    margin-left:20px;
     height:35px;
     margin-top:1em;
   }
@@ -90,7 +90,7 @@ span {
     background-color: #fff;
     box-shadow:0 5px 10px #000;
     height:340px;
-    left:31px;
+    left:21px;
     overflow-x:hidden;
     overflow-y:scroll;
     padding:0;
